# advent-of-code

./: .gitignore
2020/day01/: main.py
2020/day04/: main.py
2020/day08/: main.py
2020/day10/: main.py
2020/day11/: main.py
2022/day01/: main.go
2022/day02/: main.go
2022/day03/: main.go
2022/day04/: main.go
2022/day05/: main.go
2022/day06/: main.go
2022/day07/: main.go
2022/day08/: main.go
2022/day09/: main.go
2022/day10/: main.go
2022/day11/: main.go
2022/day12/: main.go
2022/day13/: main.go
2022/day14/: main.go
2022/day15/: main.go
2022/day21/: main.go
2023/day01/: main.py
2023/day02/: main.py
2023/day03/: main.py
2023/day04/: main.py
2023/day06/: main.py
2023/day07/: main.py
2023/day08/: main.py
2024/: .gitignore
2024/day01/: main.hs
2024/day02/: main.hs
2024/day03/: Main.hs  day03.cabal
2024/day04/: Main.hs  day04.cabal
2024/day05/: Main.hs  day05.cabal
2024/day06/: Main.hs  day06.cabal
2024/day07/: Main.hs  day07.cabal
2024/day08/: Main.hs  day08.cabal
2024/day10/: Main.hs  day10.cabal
2024/day11/: Main.hs  day11.cabal
2024/day12/: Main.hs  day12.cabal
2025/: .gitignore
2025/day01/: main.py  output
2025/day02/: main.py
2025/day03/: main.py
2025/day04/: main.py
2025/day05/: Makefile  main.ml
2025/day06/: main.ml
2025/day07/: main.ml
day01/: main.py  main.swift
day02/: main.py
day03/: main.py
day05/: main.py
day06/: main.py
day07/: main.py
day09/: main.py
day12/: main.py
puzzle01/: main.py
