cabal-version:      3.0
name:               day04
version:            0.1.0.0
author:             Nelson Gillo
maintainer:         nelson@gillos.de
build-type:         Simple

common warnings
    ghc-options: -Wall

executable day04
    import:             warnings
    main-is:            Main.hs
    build-depends:      base ^>=4.17.2.1,
                        directory ^>= 1.3.7.1,
                        regex-tdfa,
    hs-source-dirs:     .
    default-language:   Haskell2010
